Refactor index.html and include Font Awesome
Updated HTML structure and added Font Awesome for icons.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My E-Portfolio</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/finals.css" />
   <link rel="stylesheet" href="css/footer.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
- <header class="header container">
+
+<!-- HEADER -->
+<header class="header container">
   <div class="logo">
     <img src="IMG/resume.jpg" alt="My Logo" class="mark-img">
     <h1>My E-Portfolio</h1>
@@ -23,122 +32,133 @@
     <span class="hamburger-line"></span>
   </button>
 
-  <nav id="site-nav" class="nav" role="navigation">
+  <nav id="site-nav" class="nav">
     <a href="index.html" class="active">Home</a>
     <a href="gallery.html">Gallery</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    
-    <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary"><span style="color:black;">Download Resume</span></a>
+    <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">Download Resume</a>
   </nav>
 </header>
 
-  <!-- MAIN  -->
-  <main class="container main">
-    <section class="content">
-      <!-- HERO -->
-      <div class="hero">
-        <div>
-          <h1>Hello, I'm <span style="color: var(--accent-1);">GEOPREY T. GAPASIN</span></h1>
-          <p class="text-muted mb-2">A passionate <b>IT student</b> specializing in web development and design.</p>
-          <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">Download Resume</a>
-        </div>
-        <img src="IMG/resume.jpg" alt="Profile photo" class="avatar">
+
+<!-- MAIN CONTENT -->
+<main class="container main">
+
+  <!-- LEFT CONTENT -->
+  <section class="content">
+
+    <!-- HERO -->
+    <div class="hero">
+      <div>
+        <h1>Hello, I'm <span style="color: var(--accent-1);">GEOPREY T. GAPASIN</span></h1>
+        <p class="text-muted mb-2">A passionate <b>IT student</b> specializing in web development and design.</p>
+        <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">Download Resume</a>
       </div>
+      <img src="IMG/resume.jpg" alt="Profile photo" class="avatar">
+    </div>
 
-      <!-- ABOUT -->
-      <section id="about" class="card mb-2">
-        <h2>About Me</h2>
-        <p>
-          I’m currently pursuing <b>Bachelor of Science in Information Technology.</b> Currently a fourth year student at <b>Data Center College of the Philippines - Bangued, Abra.</b>  
-          My focus is on building clean, responsive websites and creating smooth user experiences through thoughtful design and effort.
-        </p>
-      </section>
-
-      <!-- PROJECTS -->
-      <section id="projects" class="card">
-        <h2>Projects</h2>
-        <div class="project-grid">
-          <div class="project-item">
-            <h3>HopOn Ride-Hailing App</h3>
-            <p>A PHP-based ride management system with login roles, vehicle tracking, and admin dashboard.</p>
-            <div>
-              <span class="tag">PHP</span>
-              <span class="tag">MySQL</span>
-              <span class="tag">CSS/JS</span>
-            </div>
-          </div>
-
-          <div class="project-item">
-            <h3>Portfolio Website</h3>
-            <p>A modern, minimalist personal portfolio built with HTML, CSS, and a rich dark color palette.</p>
-            <div>
-              <span class="tag">HTML</span>
-              <span class="tag">CSS</span>
-              <span class="tag">JS</span>
-            </div>
-          </div>
-        </div>
-      </section>
+    <!-- ABOUT -->
+    <section id="about" class="card mb-2">
+      <h2>About Me</h2>
+      <p>
+        I’m currently pursuing a <b>Bachelor of Science in Information Technology</b> as a fourth-year student at
+        <b>Data Center College of the Philippines – Bangued, Abra.</b>
+        My passion is building clean, responsive websites and delivering smooth, user-friendly experiences.
+      </p>
     </section>
 
-    <!-- SIDEBAR -->
-    <aside class="sidebar">
-      <div class="card">
-        <h2>Contact Info</h2>
-        <p>Email: <a href="mailto:gapasingeoprey@gmail.com">gapasingeoprey@gmail.com</a></p>
-        <p>Facebook: <a href="https://facebook.com/Gapasin.G22" target="_blank">facebook.com/geopreygapasin</a></p>
-        <p>GitHub: <a href="https://github.com/geopreygap" target="_blank">github.com/geopreygapasin</a></p>
+    <!-- PROJECTS -->
+    <section id="projects" class="card">
+      <h2>Projects</h2>
+
+      <div class="project-grid">
+
+        <div class="project-item">
+          <h3>HopOn Ride-Hailing App</h3>
+          <p>A PHP-based ride management system with login roles, vehicle tracking, and admin dashboard.</p>
+          <div>
+            <span class="tag">PHP</span>
+            <span class="tag">MySQL</span>
+            <span class="tag">CSS/JS</span>
+          </div>
+        </div>
+
+        <div class="project-item">
+          <h3>Portfolio Website</h3>
+          <p>A modern, minimalist personal portfolio built with HTML, CSS, and a rich dark color palette.</p>
+          <div>
+            <span class="tag">HTML</span>
+            <span class="tag">CSS</span>
+            <span class="tag">JS</span>
+          </div>
+        </div>
+
       </div>
+    </section>
 
-      <div class="card mt-2">
-        <h2>Skills</h2>
-        <p>
-          <span class="tag">Web Design</span>
-          <span class="tag">JavaScript</span>
-          <span class="tag">Python</span>
-        </p>
-        <p>
-          <span class="tag">Database</span>
-          <span class="tag">System Analysis</span>
-          <span class="tag">UI/UX</span>
-        </p>
-      </div>
-    </aside>
-  </main>
+  </section>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="footer-content">
-      <p>&copy; 2025 — All Rights Reserved.</p>
-    </div>
-    <div class="footer-section quick-links">
-      <h4>🔗 Quick Links</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+
+  <!-- SIDEBAR -->
+  <aside class="sidebar">
+
+    <div class="card">
+      <h2>Contact Info</h2>
+      <p>Email: <a href="mailto:gapasingeoprey@gmail.com">gapasingeoprey@gmail.com</a></p>
+      <p>Facebook: <a href="https://facebook.com/Gapasin.G22" target="_blank">facebook.com/Gapasin.G22</a></p>
+      <p>GitHub: <a href="https://github.com/geopreygap" target="_blank">github.com/geopreygap</a></p>
     </div>
 
-      <div class="footer-social-icons">
-        <h4>Follow or Message me on</h4>
-        <ul class="social-icons">
-          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
-        </ul>
-      </div>
+    <div class="card mt-2">
+      <h2>Skills</h2>
+      <p>
+        <span class="tag">Web Design</span>
+        <span class="tag">JavaScript</span>
+        <span class="tag">Python</span>
+      </p>
+      <p>
+        <span class="tag">Database</span>
+        <span class="tag">System Analysis</span>
+        <span class="tag">UI/UX</span>
+      </p>
     </div>
-  </footer>
 
-  <!-- JS -->
+  </aside>
+
+</main>
+
+
+<!-- FOOTER -->
+<footer class="footer">
+
+  <div class="footer-content">
+    <p>&copy; 2025 — All Rights Reserved.</p>
+  </div>
+
+  <div class="footer-section quick-links">
+    <h4>🔗 Quick Links</h4>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-social-icons">
+    <h4>Follow or Message me on</h4>
+    <ul class="social-icons">
+      <li><a href="https://facebook.com/Gapasin.G22"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://github.com/geopreygap"><i class="fa-brands fa-github"></i></a></li>
+      <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+    </ul>
+  </div>
+
+</footer>
+
+
+<!-- JS -->
 <script src="js/main.js"></script>
 </body>
 </html>
-
-
-
-
-
