Fix HTML encoding issues in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -131,7 +131,8 @@
         <ul class="social-icons">
           <li><a href="https://facebook.com/Gapasin.G22"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="https://github.com/geopreygap"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+          <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa fa-envelope"></i></a></li>
+
         </ul>
       </div>
 
@@ -145,3 +146,4 @@
 
 </body>
 </html>
+
