Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">Download Resume</a>
+    <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary"><span style="color:black;">Download Resume</span></a>
   </nav>
 </header>
 
@@ -151,7 +151,8 @@
     <ul class="social-icons">
       <li><a href="https://facebook.com/Gapasin.G22"><i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="https://github.com/geopreygap"><i class="fa-brands fa-github"></i></a></li>
-      <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+      <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa fa-envelope"></i></a></li>
+
     </ul>
   </div>
 
@@ -162,3 +163,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
