--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,8 @@
         <ul class="social-icons">
           <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
           <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
+          <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa fa-envelope"></i></a></li>
+
         </ul>
       </div>
     </div>
@@ -132,5 +133,6 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
