Fix HTML encoding issues in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
       <a href="portfolio.html">Portfolio</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-      <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">Download Resume</a>
+      <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary"><span style="color:black;">Download Resume</span></a>
     </nav>
 
   </header>
@@ -146,4 +146,5 @@
 
 </body>
 </html>
+
 
