--- a/portfolio.html
+++ b/portfolio.html
@@ -103,36 +103,36 @@
     <iframe src="GEOPREY%20T.%20GAPASIN-2.pdf" width="100%" height="100%" style="border:none;"></iframe>
   </div>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="footer-content">
-      <p>&copy; 2025 — All Rights Reserved.</p>
+<!-- FOOTER -->
+<footer class="footer">
 
-      <div class="footer-section quick-links">
-        <h4>🔗 Quick Links</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+  <div class="footer-content">
+    <p>&copy; 2025 — All Rights Reserved.</p>
+  </div>
 
-      <div class="footer-social-icons">
-        <h4>Follow or Message me on</h4>
-        <ul class="social-icons">
-          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa fa-envelope"></i></a></li>
+  <div class="footer-section quick-links">
+    <h4>🔗 Quick Links</h4>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
 
-        </ul>
-      </div>
-    </div>
-  </footer>
+  <div class="footer-social-icons">
+    <h4>Follow or Message me on</h4>
+    <ul class="social-icons">
+      <li><a href="https://facebook.com/Gapasin.G22"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://github.com/geopreygap"><i class="fa-brands fa-github"></i></a></li>
+      <li><a href="mailto:gapasingeoprey@gmail.com"><i class="fa fa-envelope"></i></a></li>
 
-  <!-- JS -->
-  <script src="js/main.js"></script>
+    </ul>
+  </div>
+
+</footer>
+
+
+<!-- JS -->
+<script src="js/main.js"></script>
 </body>
 </html>
-
-
-
